kleinere Fehler verbessert

--- a/Ausarbeitung/Handout.tex
+++ b/Ausarbeitung/Handout.tex
@@ -125,7 +125,7 @@
 	\begin{minipage}{0.3\textwidth}
 		\begin{flushright}
 			Lukas \textsc{Graf} \\
-			12. Mai 2016 \\
+			2. Juni 2016 \\
 			Sommersemester 2016
 		\end{flushright}
 	\end{minipage}
@@ -248,7 +248,7 @@
 		
 		\begin{lemma}[Lemma 3.11 in \cite{HetCVRP}]~
 			
-			Die von \cref{AlgDecomposition} bestimmte Zerlegung $\Tc = (\Tc_i)_{i\geq 0}$ ist $(6, 40)$-zuweisbar.
+			Die von \cref{AlgDecomposition} bestimmte Zerlegung $\Tc = (\Tc_l)_{l\geq 0}$ ist $(6, 40)$-zuweisbar.
 		\end{lemma}
 
 		\begin{defn}
@@ -263,7 +263,7 @@
 
 		\begin{lemma}[Theorem 1 in \cite{Rounding}, Lemma 3.2 in \cite{HetCVRP}]~
 			
-			Gegeben einen $(\alpha, \beta)$-zuweisbaren Wald, liefern \cref{AlgFractionalAssignment} und \cref{AlgRoundingAssignment} eine $(4\alpha+2\beta)$-approximative Lösung für \HetTSP.
+			Gegeben einen $(\alpha, \beta)$-zuweisbaren Wald, liefern \cref{AlgFractionalAssignment} und \cref{AlgRoundingAssignment} eine $(8\alpha+4\beta)$-approximative Lösung für \HetTSP.
 		\end{lemma}
 	\end{minipage}
 	
